--- a/css/style.css
+++ b/css/style.css
@@ -8006,6 +8006,54 @@ textarea.form-control-lg {
   visibility: hidden !important;
 }
 
+.z-negative {
+  z-index: -1 !important;
+}
+
+.z-0 {
+  z-index: 0 !important;
+}
+
+.z-10 {
+  z-index: 10 !important;
+}
+
+.z-20 {
+  z-index: 20 !important;
+}
+
+.z-30 {
+  z-index: 30 !important;
+}
+
+.z-40 {
+  z-index: 40 !important;
+}
+
+.z-50 {
+  z-index: 50 !important;
+}
+
+.z-60 {
+  z-index: 60 !important;
+}
+
+.z-70 {
+  z-index: 70 !important;
+}
+
+.z-80 {
+  z-index: 80 !important;
+}
+
+.z-90 {
+  z-index: 90 !important;
+}
+
+.z-100 {
+  z-index: 100 !important;
+}
+
 @media (min-width: 576px) {
   .float-sm-start {
     float: left !important;
@@ -8500,6 +8548,42 @@ textarea.form-control-lg {
   }
   .text-sm-center {
     text-align: center !important;
+  }
+  .z-sm-negative {
+    z-index: -1 !important;
+  }
+  .z-sm-0 {
+    z-index: 0 !important;
+  }
+  .z-sm-10 {
+    z-index: 10 !important;
+  }
+  .z-sm-20 {
+    z-index: 20 !important;
+  }
+  .z-sm-30 {
+    z-index: 30 !important;
+  }
+  .z-sm-40 {
+    z-index: 40 !important;
+  }
+  .z-sm-50 {
+    z-index: 50 !important;
+  }
+  .z-sm-60 {
+    z-index: 60 !important;
+  }
+  .z-sm-70 {
+    z-index: 70 !important;
+  }
+  .z-sm-80 {
+    z-index: 80 !important;
+  }
+  .z-sm-90 {
+    z-index: 90 !important;
+  }
+  .z-sm-100 {
+    z-index: 100 !important;
   }
 }
 @media (min-width: 768px) {
@@ -8997,6 +9081,42 @@ textarea.form-control-lg {
   .text-md-center {
     text-align: center !important;
   }
+  .z-md-negative {
+    z-index: -1 !important;
+  }
+  .z-md-0 {
+    z-index: 0 !important;
+  }
+  .z-md-10 {
+    z-index: 10 !important;
+  }
+  .z-md-20 {
+    z-index: 20 !important;
+  }
+  .z-md-30 {
+    z-index: 30 !important;
+  }
+  .z-md-40 {
+    z-index: 40 !important;
+  }
+  .z-md-50 {
+    z-index: 50 !important;
+  }
+  .z-md-60 {
+    z-index: 60 !important;
+  }
+  .z-md-70 {
+    z-index: 70 !important;
+  }
+  .z-md-80 {
+    z-index: 80 !important;
+  }
+  .z-md-90 {
+    z-index: 90 !important;
+  }
+  .z-md-100 {
+    z-index: 100 !important;
+  }
 }
 @media (min-width: 992px) {
   .float-lg-start {
@@ -9492,6 +9612,42 @@ textarea.form-control-lg {
   }
   .text-lg-center {
     text-align: center !important;
+  }
+  .z-lg-negative {
+    z-index: -1 !important;
+  }
+  .z-lg-0 {
+    z-index: 0 !important;
+  }
+  .z-lg-10 {
+    z-index: 10 !important;
+  }
+  .z-lg-20 {
+    z-index: 20 !important;
+  }
+  .z-lg-30 {
+    z-index: 30 !important;
+  }
+  .z-lg-40 {
+    z-index: 40 !important;
+  }
+  .z-lg-50 {
+    z-index: 50 !important;
+  }
+  .z-lg-60 {
+    z-index: 60 !important;
+  }
+  .z-lg-70 {
+    z-index: 70 !important;
+  }
+  .z-lg-80 {
+    z-index: 80 !important;
+  }
+  .z-lg-90 {
+    z-index: 90 !important;
+  }
+  .z-lg-100 {
+    z-index: 100 !important;
   }
 }
 @media (min-width: 1200px) {
@@ -9989,6 +10145,42 @@ textarea.form-control-lg {
   .text-xl-center {
     text-align: center !important;
   }
+  .z-xl-negative {
+    z-index: -1 !important;
+  }
+  .z-xl-0 {
+    z-index: 0 !important;
+  }
+  .z-xl-10 {
+    z-index: 10 !important;
+  }
+  .z-xl-20 {
+    z-index: 20 !important;
+  }
+  .z-xl-30 {
+    z-index: 30 !important;
+  }
+  .z-xl-40 {
+    z-index: 40 !important;
+  }
+  .z-xl-50 {
+    z-index: 50 !important;
+  }
+  .z-xl-60 {
+    z-index: 60 !important;
+  }
+  .z-xl-70 {
+    z-index: 70 !important;
+  }
+  .z-xl-80 {
+    z-index: 80 !important;
+  }
+  .z-xl-90 {
+    z-index: 90 !important;
+  }
+  .z-xl-100 {
+    z-index: 100 !important;
+  }
 }
 @media (min-width: 1400px) {
   .float-xxl-start {
@@ -10484,6 +10676,42 @@ textarea.form-control-lg {
   }
   .text-xxl-center {
     text-align: center !important;
+  }
+  .z-xxl-negative {
+    z-index: -1 !important;
+  }
+  .z-xxl-0 {
+    z-index: 0 !important;
+  }
+  .z-xxl-10 {
+    z-index: 10 !important;
+  }
+  .z-xxl-20 {
+    z-index: 20 !important;
+  }
+  .z-xxl-30 {
+    z-index: 30 !important;
+  }
+  .z-xxl-40 {
+    z-index: 40 !important;
+  }
+  .z-xxl-50 {
+    z-index: 50 !important;
+  }
+  .z-xxl-60 {
+    z-index: 60 !important;
+  }
+  .z-xxl-70 {
+    z-index: 70 !important;
+  }
+  .z-xxl-80 {
+    z-index: 80 !important;
+  }
+  .z-xxl-90 {
+    z-index: 90 !important;
+  }
+  .z-xxl-100 {
+    z-index: 100 !important;
   }
 }
 @media (min-width: 1200px) {
